README - 12/02/2003
-------------------

CHANGES IN Mini-XML 1.3

	- Fixed several bugs in the mxmldoc utility.
	- Added new error callback function to catch a variety
	  of errors and log them to someplace other than stderr.
	- The mxmlElementSetAttr() function now allows for NULL
	  attribute values.
	- The load and save functions now properly handle quoted
	  element and attribute name strings properly, e.g. for
	  !DOCTYPE declarations.


CHANGES IN Mini-XML 1.2

	- Added new "set" methods to set the value of a node.
	- Added new formatted text methods mxmlNewTextf() and
	  mxmlSetTextf() to create/set a text node value using
	  printf-style formats.
	- Added new standard callbacks for use with the mxmlLoad
	  functions.
	- Updated the HTML documentation to include examples of
	  the walk and load function output.
	- Added --with/without-ansi configure option to control
	  the strdup() function check.
	- Added --with/without-snprintf configure option to
	  control the snprintf() and vsnprintf() function
	  checks.


CHANGES IN Mini-XML 1.1.2

	- The mxml(3) man page wasn't updated for the string
	  functions.
	- mxmlSaveString() returned the wrong number of
	  characters.
	- mxml_add_char() updated the buffer pointer in the
	  wrong place.


CHANGES IN Mini-XML 1.1.1

	- The private mxml_add_ch() function did not update the
	  start-of-buffer pointer which could cause a crash when
	  using mxmlSaveString().
	- The private mxml_write_ws() function called putc()
	  instead of using the proper callback which could cause
	  a crash when using mxmlSaveString().
	- Added a mxmlSaveAllocString() convenience function for
	  saving an XML node tree to an allocated string.


CHANGES IN Mini-XML 1.1

	- The mxmlLoadFile() function now uses dynamically
	  allocated string buffers for element names, attribute
	  names, and attribute values.  Previously they were
	  capped at 16383, 255, and 255 bytes, respectively.
	- Added a new mxmlLoadString() function for loading an